# git-remote-replacer

./: LICENSE  README.md  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.tsx  index.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs
src/components/: BuddhaSplash.tsx  MainLayout.scss  MainLayout.tsx  TitleBar.tsx
src/types/: index.ts
